--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <div class="input-group mb-3">
                 <label class="input-group-text" for="inputGroupSelect01">Select Difficulty</label>
                 <select class="form-select" id="inputGroupSelect01">
-                    <option selected>Choose...</option>
-                    <option class="textlevel" id="difficulty" value="1">Easy</option>
+                    <option selected class="textlevel" id="difficulty" value="1">Easy</option>
                     <option class="textlevel" id="difficulty" value="2">Medium</option>
                     <option class="textlevel" id="difficulty" value="3">Hard</option>
                 </select>
@@ -50,7 +49,7 @@
             <div class="mb-3">
                 <label for="sample-text" class="form-label">Test your typing speed by typing the text shown
                     below:</label>
-                <textarea class="form-control" id="sample-text" rows="3" readonly></textarea>
+                <textarea class="form-control" id="sample-text" rows="3"></textarea>
             </div>
 
             <div class="mb-3">
