--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 
 <body>
-    <header class="container">
+    <header class="container-fluid row text-center">
         <h1 class="col-12">TypeRacer</h1>
-        <div class="col-12">
-        <button class="instructions-btn" id="instructionsBtn">Instructions</button>
+        <div class="col-12 justify-content-center d-flex instructions-container">
+        <button class="instructions-btn row" id="instructionsBtn">Instructions</button>
             </div>
     </header>
 
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <main class="container">
+    <main class="container-fluid row">
         <section id="gameSection" class="col-12 col-md-9 col-lg-8 mx-auto">
             <div class="input-group mb-3">
                 <label class="input-group-text" for="inputGroupSelect01">Select Difficulty</label>
@@ -49,12 +49,12 @@
             <div class="mb-3">
                 <label for="sample-text" class="form-label">Test your typing speed by typing the text shown
                     below:</label>
-                <textarea class="form-control" id="sample-text" rows="3"></textarea>
+                <textarea class="form-control fw-bold" id="sample-text" rows="3"></textarea>
             </div>
 
             <div class="mb-3">
                 <label for="typingArea" class="form-label">Click the start button to complete the test</label>
-                <textarea class="form-control" id="typingArea" rows="3"></textarea>
+                <textarea class="form-control " id="typingArea" rows="3"></textarea>
             </div>
             <div class="mb-3 d-flex gap-4 btn-group btn-group-lg justify-content-center">
                 <button class="btn btn-outline-warning" id="start" data-action="start">Start</button>
