--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="mb-3">
                 <label for="sample-text" class="form-label">Test your typing speed by typing the text shown
                     below:</label>
-                <textarea class="form-control fw-bold" id="sample-text" rows="3"></textarea>
+                <div class="form-control fw-bold" id="sample-text" rows="3"></div>
             </div>
 
             <div class="mb-3">
